--- a/index.html
+++ b/index.html
@@ -4,11 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    sfkdkf
+    <header class="my-12">
+        <nav class="flex justify-between items-center">
+            <a href="/" class="flex gap-2 items-center ">
+                <img src="/assets/logo.webp" alt="logo">
+                <h4 class="text-2xl font-bold">Peddy</h4>
+            </a>
+            <ul class="min-w-48 flex justify-between gap-5">
+                <li><a href="#" class=" hover:text-[#0e7981] border-b border-b-transparent hover:border-b-[#0e7981] transition-all">Home</a></li>
+                <li><a href="#" class=" hover:text-[#0e7981] border-b border-b-transparent hover:border-b-[#0e7981] transition-all">Shop</a></li>
+                <li><a href="#" class=" hover:text-[#0e7981] border-b border-b-transparent hover:border-b-[#0e7981] transition-all">Contact</a></li>
+            </ul>
+            <div class="p-3 rounded-full border border-[#0e798127]">
+                <img width="20" height="20" src="https://img.icons8.com/small/20/user.png" alt="user"/>
+            </div>
+        </nav>
+    </header>
 
+    <main>
+        <section>
+            <h2>Adopt your best friend</h2>
+        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a.</p>
+        <div id="categories">
+
+        </div>
+        </section>
+    </main>
     <script src="scripts/script.js"></script>
 </body>
 </html>
