--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <section>
             <h2>Adopt your best friend</h2>
         <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a.</p>
-        <div id="categories">
+        <div id="category_container" class="flex gap-5 justify-between" onclick="showActive(event)">
 
         </div>
         </section>
