--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    <header class="my-12">
-      <nav class="flex justify-between items-center">
+    <header class="my-12 px-2 sm:px-6 md:px-10 lg:px-16">
+      <nav class="flex flex-col md:flex-row justify-between items-center gap-5">
         <a href="/" class="flex gap-2 items-center">
           <img src="/assets/logo.webp" alt="logo" />
           <h4 class="text-2xl font-bold">Peddy</h4>
         </a>
-        <ul class="min-w-48 flex justify-between gap-5">
+        <ul class="min-w-48 flex flex-col md:flex-row justify-between items-center gap-5">
           <li>
             <a
               href="#"
@@ -47,8 +47,8 @@
         </div>
       </nav>
       <section class="flex flex-col gap-6 items-center my-14">
-        <p><strong>Bringing Families Together ❤️‍🔥</strong></p>
-        <h1 class="text-7xl font-semibold text-center">
+        <p class="text-center"><strong>Bringing Families Together ❤️‍🔥</strong></p>
+        <h1 class="text-4xl md:text-6xl lg:text-7xl font-semibold text-center">
           Your Path to Adoption <br />
           Starts Here
         </h1>
@@ -64,35 +64,35 @@
       </section>
     </header>
 
-    <main id="main" class="my-10">
+    <main id="main" class="my-10 px-2 sm:px-6 md:px-10 lg:px-16">
       <!-- category section -->
       <section class="py-5">
-        <h2>Adopt your best friend</h2>
-        <p>
+        <h2 class="w-1/2 mx-auto text-4xl font-bold mb-5">Adopt your best friend</h2>
+        <p class="w-2/3 mx-auto mb-10 text-center">
           It is a long established fact that a reader will be distracted by the
           readable content of a page when looking at its layout. The point of
           using Lorem Ipsum is that it has a.
         </p>
         <div
           id="category_container"
-          class="flex gap-5 justify-between"
+          class="flex gap-5 justify-center lg:justify-between flex-wrap"
           onclick="showActive(event)"
         ></div>
       </section>
 
       <!-- pets section -->
       <section class="py-5">
-        <div class="my-3 flex justify-between items-center">
+        <div class="my-3 flex justify-center sm:justify-between items-center gap-3 flex-wrap">
           <h4 class="text-2xl text-[#131313] font-bold">Best Deal For You</h4>
           <button class="bg-[#0E7A81] text-white px-4 py-2 rounded-xl text-lg">
             Sort by price
           </button>
         </div>
-        <div class="flex gap-3">
-          <div id="pet_container" class="w-3/4 grid grid-cols-3 gap-3"></div>
+        <div class="flex gap-3 flex-wrap sm:flex-nowrap">
+          <div id="pet_container" class="w-full sm:w-1/2 md:w-2/3 lg:w-3/4 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-3"></div>
           <div
             id="liked_pet_container"
-            class="w-1/4 grid grid-cols-2 gap-2 content-start border rounded-lg p-3"
+            class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 grid grid-cols-2 gap-2 content-start border rounded-lg p-3"
           >
             <span class="col-span-full text-center text-gray-400"
               >No liked pet yet!</span
@@ -102,7 +102,7 @@
       </section>
     </main>
 
-    <footer class="flex justify-between px-20 py-10 bg-[#131313] text-white">
+    <footer class="flex justify-center sm:justify-between items-center md:items-start gap-8 px-20 py-10 bg-[#131313] text-white flex-wrap">
       <div class="flex flex-col gap-2">
         <a href="/" class="flex gap-2 items-center mb-4">
           <img src="/assets/logo.webp" alt="logo" />
